# 2026_VoiceToText

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.txt  LICENSE_NC.txt  README.md
0_Planning/: README.md
1_Documentation/: README.md  template.c  template.h
2_Tools/: README.md  publish_github_snapshot.ps1
3_Hardware/: README.md
4_HardwareDocu/: README.md
5_Software/: README.md
5_Software/app/: .gitattributes  README.md  VoiceToText.spec  pyproject.toml  pytest.ini  requirements-translate.txt  requirements.lock.txt  vtt_launcher.py
5_Software/app/scripts/: README.md  build_windows_portable.ps1  setup_linux.sh  setup_windows.bat  setup_windows.ps1
5_Software/app/src/voice_to_text/: __init__.py  app.py  audio.py  config.py  feedback.py  first_run.py  logging_setup.py  main.py  overlay.py  paste.py  settings_cli.py  settings_ui.py  stt.py  tray.py  vad.py
5_Software/app/tests/: test_app_behavior.py  test_config.py  test_first_run.py  test_overlay.py  test_paste.py  test_settings_cli.py  test_settings_ui.py  test_stt_options.py  test_tray.py  test_vad.py
6_SoftwareDocu/: README.md
7_Delivery/: README.md
9_Others/: README.md
